--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,20 @@
 .header {
     color: teal;
-    height: 200px;
+    height: 60px;
     width: 100%;
     background: teal;
+    margin-bottom: 100px;
+}
+
+.header_items {
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.HeaderItem {
+    color: white;
+    text-decoration: none;
+
 }
