--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,6 +14,9 @@
 }
 
 .HeaderItem {
-    color: black;
+    color: white;
     text-decoration: none;
+    padding: 3px 5px;
+    border: white solid 1px;
+    border-radius: 5px;
 }
